--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "module": "index.ts",
   "type": "module",
   "scripts": {
-    "dev": "bun run --hot index.ts"
+    "dev": "bun run --hot index.ts",
+    "test": "jest"
   },
   "devDependencies": {
     "@types/bun": "latest"
@@ -16,6 +17,7 @@
     "@types/pg": "^8.11.10",
     "@types/simple-oauth2": "^5.0.7",
     "hono": "^4.5.11",
+    "jest": "^29.7.0",
     "json-sql-builder2": "^1.0.24",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.13.0",
